--- a/frontend/src/assets/EditCategory.scss
+++ b/frontend/src/assets/EditCategory.scss
@@ -6,12 +6,18 @@
   list-style-type: none; /* 移除默认列表样式 */
 }
 
-button{font-size: 10px;height: 20px !important;margin-left: 10px;}
+button {
+  font-size: 10px;
+  height: 20px !important;
+  margin-left: 10px;
+}
 
-.category{
-  display: flex;              /* 使用 flexbox 布局 */
-  align-items: center; 
+.category {
+  display: flex;
+  align-items: center;
   height: 30px;
+  border-bottom: 1px solid lightgray; /* 添加浅灰色的底边框 */
+  padding:10px 0 10px 0;
 }
 
 .sub-category {
@@ -21,10 +27,50 @@ button{font-size: 10px;height: 20px !important;margin-left: 10px;}
   margin-left: 20px;
   margin-top: 5px;
   font-size: smaller;
-  display: flex;              /* 使用 flexbox 布局 */
-  align-items: center; 
+  display: flex; /* 使用 flexbox 布局 */
+  align-items: center;
   height: 30px;
-  padding:0 10px 0 10px;
+  padding: 0 10px 0 10px;
 }
 
-.noSonText{font-size: 10px;color: #666;margin-left: 10px;}
+.noSonText {
+  font-size: 10px;
+  color: #666;
+  margin-left: 10px;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.edit-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000; // 确保弹出框在其他元素之上
+}
+
+.edit-modal h3 {
+  margin: 0 0 10px;
+}
+
+.edit-modal input {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
